--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(data_structures C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(data_structures linked_list.c)
+add_executable(linked_list linked_list.c)
+add_executable(double_linked_list double_linked_list.c)
